2012-12-06  Shinya Kawanaka  <shinyak@chromium.org>

        Internals.getElementByIdInShadowRoot is nonsense now.
        https://bugs.webkit.org/show_bug.cgi?id=104241

        Reviewed by Kent Tamura.

        * win/WebKit2.def.in:

2012-12-06  Christophe Dumez  <christophe.dumez@intel.com>

        [EFL][WK2] Context clients should unregister themselves when destroyed
        https://bugs.webkit.org/show_bug.cgi?id=104113

        Reviewed by Kenneth Rohde Christiansen.

        Make sure the context clients (History and Download clients)
        unregister themselves when destroyed to make sure their
        callback functions are never called after the client objects
        have been destroyed (i.e. when the parent Ewk_Context has
        been destroyed).

        This addresses crashing issues after a Ewk_Context object
        gets unref'd and destroyed.

        * UIProcess/efl/ContextHistoryClientEfl.cpp:
        (WebKit::ContextHistoryClientEfl::ContextHistoryClientEfl):
        (WebKit):
        (WebKit::ContextHistoryClientEfl::~ContextHistoryClientEfl):
        * UIProcess/efl/ContextHistoryClientEfl.h:
        (ContextHistoryClientEfl):
        * UIProcess/efl/DownloadManagerEfl.cpp:
        (WebKit::DownloadManagerEfl::~DownloadManagerEfl):
        (WebKit):
        * UIProcess/efl/DownloadManagerEfl.h:
        (DownloadManagerEfl):

2012-12-05  Huang Dongsung  <luxtella@company100.net>

        Coordinated Graphics: Reorder messages to LayerTreeCoordinatorProxy
        https://bugs.webkit.org/show_bug.cgi?id=103843

        Reviewed by Noam Rosenthal.

        Clarify LayerTreeRenderer::setRootLayerID() can be called only once during its
        lifecycle. LayerTreeRenderer, LayerTreeCoordinator and LayerTreeCoordinatorProxy
        have the same lifecycle to WebPage and the root layer is reused even if loading
        new page, so it is impossible to call LayerTreeRenderer::setRootLayerID() more
        than twice.
