@@ -1,3 +1,15 @@
+2012-12-06  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r136795.
+        http://trac.webkit.org/changeset/136795
+        https://bugs.webkit.org/show_bug.cgi?id=104257
+
+        Asserts on EFL WebKit2 Debug bot (Requested by yael on
+        #webkit).
+
+        * UIProcess/CoordinatedGraphics/LayerTreeRenderer.cpp:
+        (WebKit::LayerTreeRenderer::setRootLayerID):
+
 2012-12-06  Shinya Kawanaka  <shinyak@chromium.org>
 
         Internals.getElementByIdInShadowRoot is nonsense now.
